<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NanoCluster</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="autokey">Auto Key: </string>
    <string name="dashhint">----</string>
    <string name="secure_login">Secure login</string>
    <string name="passcode_text">Passcode:</string>
    <string name="pin_text">PIN:</string>
    <string name="cluster_login_banner">Login</string>
    <string name="title_activity_network_connect">NetworkConnect</string>

    <string name="finding_service">Finding local services</string>
    <string name="btn_send">Send</string>
    <string name="txt_hint">Type Message</string>

</resources>
