<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity">
    <TableRow
        android:id="@+id/banner_row"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">
        <TextView
            android:text="@string/cluster_login_banner"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:textSize="30sp"
            android:textStyle="bold"
            android:id="@+id/login_banner"
            android:gravity="center"/>
    </TableRow>
    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/banner_row"
        android:id="@+id/pin_row">
        <TextView
            android:text="@string/pin_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:id="@+id/pin_text" />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:hint="@string/dashhint"
            android:inputType="numberPassword"
            android:id="@+id/pin_input"/>
        </TableRow>
    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/autokey_row"
        android:layout_below="@+id/pin_row"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <TextView
            android:text="@string/autokey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:id="@+id/autokey_text"
            />
        <TextView
            android:layout_marginStart="10sp"
            android:layout_marginLeft="10sp"
            android:hint="@string/dashhint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textStyle="bold"
            android:id="@+id/passcode_key" />
    </TableRow>
    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/autokey_row">
        <TextView
            android:text="@string/passcode_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:id="@+id/passkey_text" />
        <EditText
            android:layout_marginStart="10sp"
            android:layout_marginLeft="10sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:hint="@string/dashhint"
            android:inputType="numberPassword"
            android:textStyle="bold"
            android:id="@+id/passcode_input"/>
    </TableRow>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/secure_login"
        android:textSize="30sp"
        android:id="@+id/button"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
